--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,5 +30,9 @@ jobs:
     # - run: |
     #     touch .env
     #     echo "${{ secrets.PROD_ENV_PRODUCT_MANAGE_FILE }}" > .env
-    - run: touch .env
+    # - run: touch .env
+    # - run: echo "${{ secrets.PROD_ENV_PRODUCT_MANAGE_FILE }}" > .env
     - run: echo "${{ secrets.PROD_ENV_PRODUCT_MANAGE_FILE }}" > .env
+    - run: echo "value ${{ secrets.PROD_ENV_PRODUCT_MANAGE_FILE }}"
+    - run: ls -l # Check file permissions and existence
+
