--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -34,5 +34,6 @@ jobs:
     # - run: echo "${{ secrets.PROD_ENV_PRODUCT_MANAGE_FILE }}" > .env
     - run: echo "${{ secrets.PROD_ENV_PRODUCT_MANAGE_FILE }}" > .env
     - run: echo "value ${{ secrets.PROD_ENV_PRODUCT_MANAGE_FILE }}"
-    - run: ls -l # Check file permissions and existence
+    - run: ls -la # Check file permissions and existence
+    - run: cat .env
 
