--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,7 +30,7 @@ jobs:
     - run: touch .env
     - run: echo "${{ secrets.PROD_ENV_PRODUCT_MANAGE_FILE }}" > .env
     # - run: echo "${{ secrets.PROD_ENV_PRODUCT_MANAGE_FILE }}" > .env
-    # - run: echo "value ${{ secrets.PROD_ENV_PRODUCT_MANAGE_FILE }}"
-    # - run: ls -la # Check file permissions and existence
-    # - run: cat .env
+    - run: echo "value ${{ secrets.PROD_ENV_PRODUCT_MANAGE_FILE }}"
+    - run: ls -la # Check file permissions and existence
+    - run: cat .env
 
